FEAT: first cocktail seed working

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,11 +1,11 @@
 <h1>This is Cocktail 'n' Mix!</h1>
 <p>To be created...</p>
 <ul>
-  <%= @cocktails.each do |cocktail| %>
+  <% @cocktails.each do |cocktail| %>
     <li>
       <%= cocktail.name %> by <%= cl_image_tag cocktail.user.avatar.key, height: 100, width: 100, crop: :fill %> </br>
-      <%=  cocktail.images.each do |image| %>
-        <%= cl_image_tag image.key, height: 300, width: 400, crop: :fill %>
+      <%  cocktail.photos.each do |photo| %>
+        <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
       <% end %>
     </li>
   <% end %>
