--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,4 +1,7 @@
 <h1>This is Cocktail 'n' Mix!</h1>
+<h2>this is an h2</h2>
+<h3>this is an h3</h3>
+<%= link_to "this is a link", "#" %>
 <p>To be created...</p>
 <ul>
   <% @cocktails.each do |cocktail| %>
