--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,9 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600&display=swap');
-// Define fonts for body and headers
-$body-font: "Montserrat", "Montserrat", "sans-serif";
-$headers-font: "Montserrat", "Montserrat", "sans-serif";
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&display=swap');// Define fonts for body and headers
+
+$body-font: "Roboto", "sans-serif";
+$headers-font: "Raleway";
 
 
 // To use a font file (.woff) uncomment following lines
