--- a/app/assets/stylesheets/config/_utilities.scss
+++ b/app/assets/stylesheets/config/_utilities.scss
@@ -1,70 +1,39 @@
-p {
-  font-style: normal;
-  font-size: 18px;
-  line-height: 27px;
+body {
+  all: unset;
+}
+
+h1, h2, h3, h4 {
   text-align: center;
+}
+
+h1, h2 {
+  font-weight: bold;
 }
 
 h1 {
-  font-style: normal;
-  font-weight: 900;
-  font-size: 36px;
-  text-align: center;
+  font-size: 39.06px;
+  color: $color-main;
 }
 
 h2 {
-  font-style: normal;
-  font-weight: 800;
-  font-size: 28px;
-  line-height: 38px;
-  text-align: center;
+  font-size: 31.25px;
+  color: $color-sec;
 }
 
-h4 {
-  font-style: normal;
-  font-weight: 300;
-  font-size: 12px;
-  line-height: 16px;
-  text-align: center;
+h3 {
+  font-size: 25px;
+}
+
+p {
+  font-size: 20px;
 }
 
 a {
-  text-decoration: none;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 25px;
-  color: #6F35E2;
-  text-align: center;
-}
+  all: unset;
+  color: $color-main;
 
-i {
-  color: #6F35E2;
   &:hover {
-    color: rgb(115, 31, 221);
+    all: unset;
+    color: $color-sec;
   }
-}
-
-body {
-  background-color: white;
-  margin-top: 80px !important;
-}
-
-.main-wrapper {
-  vertical-align: center;
-}
-
-// .cell {
-//   vertical-align: middle;
-//   width: 100%;
-//   margin-top: 50px;
-// }
-
-.root {
-
-//   width: 465px;
-//   height: 600px;
-//   margin: auto;
-
-  background-color: white;
 }
