--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,10 +1,19 @@
 .avatar {
-  width: 40px;
-  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.avatar-small {
+  width: 50px;
+  height: 50px;
 }
 
 .avatar-large {
-  width: 56px;
+  width: 70px;
+  height: 70px;
+}
+
+.avatar-round {
   border-radius: 50%;
 }
 
