--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,14 +1,13 @@
-// External libraries
-@import "bootstrap";
-@import "font-awesome-sprockets";
-@import "font-awesome";
-
 // Graphical variables
 @import "config/fonts";
 @import "config/colors";
 @import "config/bootstrap_variables";
-@import "config/utilities";
 
+// External libraries
+@import "bootstrap/scss/bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
-// CSS parials
-@import "components/index"
+// Your CSS partials
+@import "components/index";
+@import "pages/index";
