--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,6 +1,6 @@
 // Define variables for your color scheme
 
-// Bootstrap predifined colors
+// For example:
 $red: #FD1015;
 $blue: #167FFB;
 $yellow: #FFC65A;
@@ -8,8 +8,3 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
-
-// Own colors
-$color-main: #7FB069;
-$color-sec: #E6AA68;
-$color-background: #F9F7F6;
