--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,9 +1,52 @@
-<div class="navbar">
-  <div class="logo">
-    <div class="navbar-right">
-      <div class="burger-menue">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+   <div class="logo-area">
+    <%= link_to root_path do %>
+      <i class="fas fa-cocktail"></i>
+    <% end %>
+    <span class="page-name">
+      Cocktail <span class="page-name-right-part">'n' Mix</span>
+    </span>
+  </div>
 
-      </div>
-    </div>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <% if user_signed_in? %>
+
+      <!-- navigation if user is signed in -->
+        <li class="nav-item active">
+          <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+        </li>
+        <li class="nav-item">
+          <%= cl_image_tag current_user.avatar.key, class: "avatar avatar-small avatar-round" %>
+        </li>
+
+      <% else %>
+
+      <!-- navigation if user is not signed in -->
+        <!-- for big devises -->
+        <li class="list-inline-item">
+          <%= link_to "Login", new_user_session_path %>
+        </li>
+        <li class="list-inline-item">
+          <%= link_to "Signup", new_user_registration_path %>
+        </li>
+
+        <!-- <li class="nav-item dropdown">
+          <%#= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <%#= link_to "Action", "#", class: "dropdown-item" %>
+            <%#= link_to "Another action", "#", class: "dropdown-item" %>
+          </div>
+        </li> -->
+
+        <!-- for small devises -->
+        <!-- <div class="burger-menue"></div> -->
+      <% end %>
+    </ul>
   </div>
 </div>
