--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,19 +1,29 @@
 .avatar {
-  width: 40px;
-  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
 }
+
+.avatar-small {
+  width: 50px;
+  height: 50px;
+}
+
 .avatar-large {
-  width: 56px;
+  width: 70px;
+  height: 70px;
+}
+
+.avatar-round {
   border-radius: 50%;
 }
+
 .avatar-bordered {
-  width: 40px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
+
 .avatar-square {
-  width: 40px;
   border-radius: 0px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
