--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,11 +1,11 @@
-.navbar-lewagon {
+.navbar-my {
   width: 100%;
   background-color: white;
   border-bottom: 3px solid $light-gray;
   padding: 15px;
 
-  // position: fixed;
-  // top: 0;
+  position: fixed;
+  top: 0;
   // z-index: 1;
 
   display: flex;
@@ -14,7 +14,6 @@
 
   ul {
     display: inline-block;
-    float: none;
   }
 
   li {
@@ -26,9 +25,6 @@
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
-}
 
 // left part of the navbar
 
@@ -36,10 +32,6 @@
   font-size: 31.25px;
   font-weight: bolder;
   display: flex;
-
-  .navbar-lewagon .navbar-brand img {
-  width: 40px;
-}
   align-items: flex-start;
 }
 
@@ -50,3 +42,9 @@
 .page-name-right-part {
   color: $color-main;
 }
+
+.dropdown-menu a {
+  padding-left: 15px;
+  font-size: 20px;
+}
+
