--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,32 +8,46 @@
     </span>
   </div>
 
-
+<!-- Right part of navbar -->
   <div class="navbar-right-part">
     <ul class="navbar-nav mr-auto list-inline">
       <% if user_signed_in? %>
 
       <!-- navigation if user is signed in -->
-        <li class="nav-item list-inline-item">
+        <li class="nav-item list-inline-item collapse-small">
           <%= link_to "Logout", destroy_user_session_path, method: :delete %>
         </li>
         <li class="nav-item list-inline-item dropdown">
           <%= cl_image_tag current_user.avatar.key, class: "avatar avatar-small avatar-round dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown", style="z-index: 2">
-            <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+
+            <!-- add for small devises -->
+
+            <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+
           </div>
       </li>
 
       <% else %>
 
       <!-- navigation if user is not signed in -->
-        <!-- for big devises -->
-        <li class="list-inline-item">
+        <!-- big devises -->
+        <li class="list-inline-item collapse-small">
           <%= link_to "Login", new_user_session_path %>
         </li>
-        <li class="list-inline-item">
+        <li class="list-inline-item collapse-small">
           <%= link_to "Signup", new_user_registration_path %>
         </li>
+
+        <!-- small devices -->
+        <li class="nav-item list-inline-item dropdown" id="navbar-burger">
+          <i class="fas fa-bars" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <%= link_to "Login", new_user_session_path, class: "dropdown-item" %>
+            <%= link_to "Signup", new_user_registration_path, class: "dropdown-item" %>
+          </div>
+      </li>
+
       <% end %>
     </ul>
   </div>
