FEAT: created buttons base, main & ghost

--- a/app/assets/stylesheets/config/_utilities.scss
+++ b/app/assets/stylesheets/config/_utilities.scss
@@ -44,6 +44,7 @@ a {
   &:hover {
     all: unset;
     cursor: pointer;
-    color: $color-sec;
+    color: $color-main;
+    opacity: 0.6;
   }
 }
