--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -3,7 +3,8 @@
 <h3>this is an h3</h3>
 <%= link_to "this is a link", "#" %>
 <p>To be created...</p>
-
+<a href="#" class="btn-base btn-main">this is a test button</a>
+<a href="#" class="btn-base btn-ghost">this is a test ghost button</a>
 <ul>
   <% @cocktails.each do |cocktail| %>
     <li>
