--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -46,6 +46,15 @@
 
 // right part of navbar
 
+#navbar-burger, #navbarDropdown {
+  transition: opacity 0.3s ease;
+
+  &:hover {
+    cursor: pointer;
+    opacity: 0.6;
+  }
+}
+
 #navbar-burger {
   display: none;
   font-size: 31.25px;
