--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -40,8 +40,8 @@
         </li>
 
         <!-- small devices -->
-        <li class="nav-item list-inline-item dropdown" id="navbar-burger">
-          <i class="fas fa-bars" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+        <li class="nav-item list-inline-item dropdown">
+          <i class="fas fa-bars" id="navbar-burger" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Login", new_user_session_path, class: "dropdown-item" %>
             <%= link_to "Signup", new_user_registration_path, class: "dropdown-item" %>
