FEAT: cocktail-card shows if it's a favorite of current_user

--- a/app/assets/stylesheets/components/_cards-cocktail.scss
+++ b/app/assets/stylesheets/components/_cards-cocktail.scss
@@ -46,7 +46,7 @@
   align-items: flex-end;
 }
 
-.card-cocktail p {
+.card-cocktail p, .favorited {
   font-size: 18px;
   opacity: .7;
   margin: 0;
