--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -18,9 +18,8 @@
 }
 
 .avatar-bordered {
-  border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  box-shadow: 0 2px 2px rgba(0,0,0, 0.5);
+  border: white 2px solid;
 }
 
 .avatar-square {
