--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,21 +1,23 @@
 <h1>This is Cocktail 'n' Mix!</h1>
 
-<div class="card-cocktail">
-  <div class="card-cocktail-photo-area">
-    <div class="card-cocktail-photo" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(http://res.cloudinary.com/kl3000/image/upload/<%= @cocktails.first.photos.first.key %>)">
-      <%= @cocktails.first.name.capitalize! %>
+<% @cocktails.each do |cocktail| %>
+  <div class="card-cocktail">
+    <div class="card-cocktail-photo-area">
+      <div class="card-cocktail-photo" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(http://res.cloudinary.com/kl3000/image/upload/<%= cocktail.photos.first.key %>)">
+        <%= cocktail.name.capitalize! %>
+      </div>
+      <%= cl_image_tag cocktail.user.avatar.key, class: "card-cocktail-user avatar avatar-large avatar-round avatar-bordered" %>
     </div>
-    <%= cl_image_tag @cocktails.first.user.avatar.key, class: "card-cocktail-user avatar avatar-large avatar-round avatar-bordered" %>
+    <div class="card-cocktail-infos">
+      <div>
+        <p>Favorited by: <%= cocktail.favorites.count %></p>
+      </div>
+      <div class="favorited">
+        <% if current_user.favorites.any? { |favorite| favorite.cocktail == cocktail } %>
+          <i class="fas fa-heart"></i>
+        <% else %>
+          <i class="far fa-heart"></i>
+        <% end %>
+      </div>
   </div>
-  <div class="card-cocktail-infos">
-    <div>
-      <p>Favorited by: <%= @cocktails.first.favorites.count %></p>
-    </div>
-    <div class="favorited">
-      <% if current_user.favorites.any? { |favorite| favorite.cocktail == @cocktails.first } %>
-        <i class="fas fa-heart"></i>
-      <% else %>
-        <i class="far fa-heart"></i>
-      <% end %>
-    </div>
-</div>
+<% end %>
