--- a/app/assets/stylesheets/components/_card-grid.scss
+++ b/app/assets/stylesheets/components/_card-grid.scss
@@ -1,6 +1,24 @@
 .card-grid {
-
+  margin-top: 30px;
+  margin-bottom: 30px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 30px;
+  justify-items: center;
+}
+
+
+// Responsiveness
+
+@media(max-width: 1200px) {
+  .card-grid {
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 30px;
+  }
+}
+
+@media(max-width: 771px) {
+  .card-grid {
+    grid-template-columns: 1fr;
+  }
 }
