--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -15,7 +15,7 @@
         </div>
         <div class="favorited">
           <% if current_user.favorites.any? { |favorite| favorite.cocktail == cocktail } %>
-            <i class="fas fa-heart"></i>>
+            <i class="fas fa-heart"></i>
           <% else %>
             <i class="far fa-heart"></i>
           <% end %>
@@ -23,4 +23,4 @@
       </div>
     </div>
   <% end %>
-</div
+</div>
