--- a/app/assets/stylesheets/components/_cards-cocktail.scss
+++ b/app/assets/stylesheets/components/_cards-cocktail.scss
@@ -27,6 +27,7 @@
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   letter-spacing: 0.2em;
+  text-align: center;
 }
 
 .card-cocktail-user {
