--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -7,7 +7,7 @@
         <div class="card-cocktail-photo" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(http://res.cloudinary.com/kl3000/image/upload/<%= cocktail.photos.first.key %>)">
           <%= cocktail.name.capitalize! %>
         </div>
-        <%= cl_image_tag cocktail.user.avatar.key, class: "card-cocktail-user avatar avatar-large avatar-round avatar-bordered" %>
+        <%= cl_image_tag cocktail.user.avatar.key, class: "card-cocktail-user avatar avatar-small avatar-round avatar-bordered" %>
       </div>
       <div class="card-cocktail-infos">
         <div>
