--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,6 +2,7 @@
 @import "alert";
 @import "avatar";
 @import "buttons";
+@import "banner";
 @import "cards-cocktail";
 @import "card-grid";
 @import "navbar";
