--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -3,37 +3,39 @@
   <div class="container">
     <h1>Your personal cocktail manager.</h1></br>
     <h3>Find. Create. Save.</h3></br>
-    <a class="btn-base btn-main" href="#">Apply now</a>
+    <a class="btn-base btn-main" href="#cocktail-list">Find your cocktail</a>
   </div>
 </div>
 
-<div class="container mt-0">
+<div class="container mt-4">
 
   <!-- list of cocktails -->
-
-  <div class="card-grid">
-    <% @cocktails.each do |cocktail| %>
-      <div class="card-cocktail">
-        <div class="card-cocktail-photo-area">
-          <div class="card-cocktail-photo" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(http://res.cloudinary.com/kl3000/image/upload/<%= cocktail.photos.first.key %>)">
-            <%= cocktail.name.capitalize! %>
+  <div id="cocktail-list">
+    <h2>Which is your cocktail tonight?</h2>
+    <div class="card-grid">
+      <% @cocktails.each do |cocktail| %>
+        <div class="card-cocktail">
+          <div class="card-cocktail-photo-area">
+            <div class="card-cocktail-photo" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(http://res.cloudinary.com/kl3000/image/upload/<%= cocktail.photos.first.key %>)">
+              <%= cocktail.name.capitalize! %>
+            </div>
+            <%= cl_image_tag cocktail.user.avatar.key, class: "card-cocktail-user avatar avatar-small avatar-round avatar-bordered" %>
           </div>
-          <%= cl_image_tag cocktail.user.avatar.key, class: "card-cocktail-user avatar avatar-small avatar-round avatar-bordered" %>
+          <div class="card-cocktail-infos">
+            <div>
+              <p>Favorited by: <%= cocktail.favorites.count %></p>
+            </div>
+            <div class="favorited">
+              <% if current_user && current_user.favorites.any? { |favorite| favorite.cocktail == cocktail } %>
+                <i class="fas fa-heart"></i>
+              <% else %>
+                <i class="far fa-heart"></i>
+              <% end %>
+            </div>
+          </div>
         </div>
-        <div class="card-cocktail-infos">
-          <div>
-            <p>Favorited by: <%= cocktail.favorites.count %></p>
-          </div>
-          <div class="favorited">
-            <% if current_user && current_user.favorites.any? { |favorite| favorite.cocktail == cocktail } %>
-              <i class="fas fa-heart"></i>
-            <% else %>
-              <i class="far fa-heart"></i>
-            <% end %>
-          </div>
-        </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
 
 </div>
