--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,4 +1,5 @@
 // Import your components CSS files here.
+@import "account_form";
 @import "alert";
 @import "avatar";
 @import "buttons";
@@ -6,4 +7,5 @@
 @import "cards-cocktail";
 @import "card-grid";
 @import "footer";
+@import "form";
 @import "navbar";
