--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,6 +6,6 @@
     <a href="https://www.linkedin.com/in/kevin-liebholz-991867132"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
-    This footer is made with <i class="fas fa-heart"></i> by Kevin Liebholz
+    This app is made with <i class="fas fa-heart"></i> by Kevin Liebholz
   </div>
 </div>
