--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,3 +1,5 @@
+// dependent on .main-container in _utilities.scss
+
 .footer {
   background-color: white;
   display: flex;
@@ -6,10 +8,12 @@
   height: 100px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
+
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
   width: 100%;
 }
+
 .footer-links {
   display: flex;
   align-items: center;
