--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,9 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="https://github.com/kevkev300"><i class="fab fa-github"></i></a>
-    <a href="https://www.instagram.com/kevinliebholz/"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.facebook.com/kevin.liebholz"><i class="fab fa-facebook"></i></a>
-    <a href="https://www.linkedin.com/in/kevin-liebholz-991867132"><i class="fab fa-linkedin"></i></a>
+    <a href="https://github.com/kevkev300" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://www.instagram.com/kevinliebholz/" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/kevin.liebholz" target="_blank"><i class="fab fa-facebook"target="_blank"></i></a>
+    <a href="https://www.linkedin.com/in/kevin-liebholz-991867132" target="_blank"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
     This app is made with <i class="fas fa-heart"></i> by Kevin Liebholz
