--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,13 @@
   </head>
 
   <body>
-    <%= render 'layouts/navbar' %>
+    <div class="main-container">
+      <%= render 'layouts/navbar' %>
       <%= yield %>
       <!-- <p class="notice"><%= notice %></p> -->
       <!-- <p class="alert"><%= alert %></p> -->
-    <%= render 'layouts/footer' %>
+      <%= render 'layouts/footer' %>
+    </div>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag "application" %>
   </body>
