--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -19,8 +19,11 @@
             <div class="card-cocktail-photo" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(http://res.cloudinary.com/kl3000/image/upload/<%= cocktail.photos.first.key %>)">
               <%= cocktail.name.capitalize! %>
             </div>
-            <%= cl_image_tag cocktail.user.avatar.key, class: "card-cocktail-user avatar avatar-small avatar-round avatar-bordered" %>
-          </div>
+            <% if cocktail.user.avatar.attached? %>
+              <%= cl_image_tag cocktail.user.avatar.key, class: "card-cocktail-user avatar avatar-small avatar-round dropdown-toggle" %>
+            <% else %>
+              <%= image_tag("https://cdn.pixabay.com/photo/2016/09/01/08/24/smiley-1635449_960_720.png", class: "card-cocktail-user avatar avatar-small avatar-round dropdown-toggle") %>
+            <% end %>          </div>
           <div class="card-cocktail-infos">
             <div>
               <p>Favorited by: <%= cocktail.favorites.count %></p>
