FEAT: edit and delete user done

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -22,7 +22,7 @@
 
 .btn-ghost {
   border: 1px solid;
-  background-color: $color-background;
+  background-color: none;
   color: $color-main;
 
   &:hover {
