--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,20 +13,20 @@
           input_html: { autocomplete: "email" }%>
         </div>
 
-        <div class="form-inputs">
+        <div>
           <%= f.input :password,
           required: true,
           hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
           input_html: { autocomplete: "new-password" } %>
         </div>
 
-        <div class="form-inputs">
+        <div>
           <%= f.input :password_confirmation,
           required: true,
           input_html: { autocomplete: "new-password" } %>
         </div>
 
-        <div class="form-inputs">
+        <div>
           <%= f.input :avatar, as: :file %>
         </div>
       </div>
