--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,7 +15,7 @@
 
       <!-- navigation if user is signed in -->
         <li class="nav-item list-inline-item collapse-small">
-          <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+          <%= link_to "Create Cocktail", new_cocktail_path %>
         </li>
         <li class="nav-item list-inline-item dropdown">
           <% if current_user.avatar.attached? %>
@@ -26,7 +26,7 @@
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 
             <!-- add for small devises -->
-
+            <%= link_to "Create Cocktail", new_cocktail_path %>
             <%= link_to "Account", edit_user_registration_path, class: "dropdown-item" %>
             <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
 
@@ -38,6 +38,9 @@
       <!-- navigation if user is not signed in -->
         <!-- big devises -->
         <li class="list-inline-item collapse-small">
+          <%= link_to "Create Cocktail", new_cocktail_path %>
+        </li>
+        <li class="list-inline-item collapse-small">
           <%= link_to "Login", new_user_session_path %>
         </li>
         <li class="list-inline-item collapse-small">
@@ -48,6 +51,7 @@
         <li class="nav-item list-inline-item dropdown">
           <i class="fas fa-bars" id="navbar-burger" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <%= link_to "Create Cocktail", new_cocktail_path, class:"dropdown-item" %>
             <%= link_to "Login", new_user_session_path, class: "dropdown-item" %>
             <%= link_to "Signup", new_user_registration_path, class: "dropdown-item" %>
           </div>
