FEAT: cocktail creation done

--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Cocktails#new</h1>
-<p>Find me in app/views/cocktails/new.html.erb</p>
+<div class="container form-base">
+  <h1>Create a new cocktail</h1>
+  <%= render 'form_cocktail' %>
+</div>
