--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -17,7 +17,7 @@
         <div class="card-cocktail">
           <div class="card-cocktail-photo-area">
             <div class="card-cocktail-photo" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(http://res.cloudinary.com/kl3000/image/upload/<%= cocktail.photos.first.key %>)">
-              <%= cocktail.name.capitalize! %>
+              <%= cocktail.name.titleize %>
             </div>
             <% if cocktail.user.avatar.attached? %>
               <%= cl_image_tag cocktail.user.avatar.key, class: "card-cocktail-user avatar avatar-small avatar-round dropdown-toggle" %>
