FEAT: basic show card

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,7 @@
 @import "buttons";
 @import "banner";
 @import "cards-cocktail";
+@import "card-detail";
 @import "card-grid";
 @import "footer";
 @import "form";
