FEAT: making deleting cocktails & ingredients possible & addin ingredients

--- a/app/assets/stylesheets/components/_card-detail.scss
+++ b/app/assets/stylesheets/components/_card-detail.scss
@@ -43,6 +43,12 @@
   text-align: left;
 }
 
+.card-detail-info a {
+  color: $gray;
+  opacity: 0.3;
+  margin-left: 10px;
+}
+
 .add-ingredient {
   width: 200px;
 
