--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -41,7 +41,7 @@
 
     <!-- Delete Account -->
     <p>Unhappy?
-    <%= link_to "Cancel my account...", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+    <%= link_to "Cancel my account...", registration_path(resource_name), data: { confirm: "Are you sure you want delete your account?" }, method: :delete %></p>
 
     <%= link_to "Back", :back, class: "btn-base btn-ghost" %>
   </div>
