--- a/app/assets/stylesheets/components/_cards-cocktail.scss
+++ b/app/assets/stylesheets/components/_cards-cocktail.scss
@@ -47,7 +47,7 @@
   align-items: flex-end;
 }
 
-.card-cocktail p, .favorited {
+.card-cocktail p, .card-cocktail .favorited {
   font-size: 18px;
   opacity: .7;
   margin: 0;
