--- a/app/assets/stylesheets/components/_card-grid.scss
+++ b/app/assets/stylesheets/components/_card-grid.scss
@@ -1,6 +1,6 @@
 .card-grid {
   margin-bottom: 30px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
