--- a/app/assets/stylesheets/components/_cards-cocktail.scss
+++ b/app/assets/stylesheets/components/_cards-cocktail.scss
@@ -5,6 +5,11 @@
   width: 300px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   border-radius: 5px;
+
+  & a {
+    margin: 0px;
+    padding: 0px;
+  }
 }
 
 
