FIX: navbar & link wo cocktail list

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -10,5 +10,6 @@
 <div class="container mt-4">
 
   <!-- list of cocktails -->
-  <h2>Which is your cocktail tonight?</h2>
+  <h2 id="cocktail-list">Which is your cocktail tonight?</h2>
   <%= render 'layouts/cocktail-list' %>
+</div>
