--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -3,7 +3,8 @@
   <div class="container">
     <h1>Your personal cocktail manager.</h1></br>
     <h3>Find. Create. Save.</h3></br>
-    <a class="btn-base btn-main" href="#cocktail-list">Find your cocktail</a>
+    <%= link_to "Find your cocktail", "#cocktail-list", class: "btn-base btn-main" %>
+    <%= link_to "Create your own cocktail", new_cocktail_path, class: "btn-base btn-ghost ml-2" %>
   </div>
 </div>
 
