--- a/app/views/cocktails/favorites.html.erb
+++ b/app/views/cocktails/favorites.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>That's what you sip most</h1>
-  <% if current_user.cocktails.empty? %>
+  <% if current_user.favorites.empty? %>
     <div style="text-align: center, padding-top: 20px">
       <%= link_to "Like your first cocktail", "/#cocktail-list", class: "btn-base btn-main btn-full-width" %>
     </div>
