--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -3,8 +3,8 @@
   <div class="container">
     <h1>Your personal cocktail manager.</h1></br>
     <h3>Find. Create. Save.</h3></br>
-    <%= link_to "Find your cocktail", "#cocktail-list", class: "btn-base btn-main" %>
-    <%= link_to "Create your own cocktail", new_cocktail_path, class: "btn-base btn-ghost ml-2" %>
+    <%= link_to "Find your cocktail", "#cocktail-list", class: "btn-base btn-main mb-2", style: "display: inline-block" %>
+    <%= link_to "Create your own cocktail", new_cocktail_path, class: "btn-base btn-ghost", style: "display: inline-block" %>
   </div>
 </div>
 
