--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,9 +7,10 @@
 
       <div class="form-inputs">
         <div>
-          <%= f.input :email,
+          <%= f.input :email, label: "Username",
               autofocus: true,
-              input_html: { autocomplete: "email" }%>
+              # input_html: { autocomplete: "email" }
+              placeholder: "cocktail_lover123"%>
         </div>
 
         <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
