FEAT: error for username

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,6 +10,7 @@
           <%= f.input :email, label: "Username",
               autofocus: true,
               # input_html: { autocomplete: "email" }
+              error: "Username has already been taken",
               placeholder: "cocktail_lover123"%>
         </div>
 
