--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,6 +10,7 @@
           <%= f.input :email, label: "Username",
           required: true,
           autofocus: true,
+          error: "Username has already been taken",
           # input_html: { autocomplete: "email" },
           placeholder: "cocktail_lover123"%>
         </div>
