--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -24,7 +24,7 @@
 
 .btn-ghost {
   border: 1px solid;
-  background-color: none;
+  background-color: rgba(0, 0, 0, 0.3);
   color: $color-main;
 
   &:hover {
